--- a/server/views/admin/index.handlebars
+++ b/server/views/admin/index.handlebars
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="../css/index.css">
 
-<div class="container ms-3 mt-2">
+<div class="container">
     <h2>Painel de administração</h2>
     <hr>
     <div class="btn-container">
