--- a/server/views/layouts/main.handlebars
+++ b/server/views/layouts/main.handlebars
@@ -9,7 +9,10 @@
 </head>
 <body>
     {{>_navbar}}
-    {{{body}}}
+    <div class="container mt-2">
+        {{{body}}}
+    </div>
+    
     
 </body>
 </html>
