--- a/server/views/index.handlebars
+++ b/server/views/index.handlebars
@@ -31,13 +31,13 @@
     <div class="container mt-5">
     <div class="row d-flex justify-content-center">
         <div class="col-md-8">
-            <div class="bg-white">
+            <div style="background-color: #363636;">
                 <ul class="nav nav-tabs nav-fill" id="myTab" role="tablist">
                     <li class="nav-item" role="presentation"> <button class="nav-link active" id="faq_tab_1-tab" data-bs-toggle="tab" data-bs-target="#faq_tab_1" type="button" role="tab" aria-controls="faq_tab_1" aria-selected="true">
                             <div class="d-flex flex-column lh-lg"> <i class='bx bxs-plane-alt'></i> <span>Alugar carro</span> </div>
                         </button> </li>
                 </ul>
-                <div class="row mb-1 mt-3 ms-1"> 
+                <div class="row mb-1 mt-3 ms-1 text-white"> 
                     <label class="form-check-label">
                         <input class="form-check-input me-1" type="checkbox" name="gender" value="male">Condutor com menos de 25 anos de idade
                     </label>
@@ -46,7 +46,7 @@
                     <div class="tab-pane fade active show" id="faq_tab_1" role="tabpanel" aria-labelledby="faq_tab_1-tab">
                         <div class="container p-3">
                             <div class="input-group mb-2"> <input type="text" class="form-select" placeholder="Cidade de retirada"> <input type="text" class="form-select" placeholder="Cidade de retorno"> </div>
-                            <div class="form-group mb-3">
+                            <div class="form-group mb-3 text-white">
                                 <span class="form-label">Data de retirada</span>
                                 <input type="date" class="form-control mt-1"> 
                                 <span class="form-label">Data de retorno</span>
