--- a/server/views/index.handlebars
+++ b/server/views/index.handlebars
@@ -45,7 +45,24 @@
                 <div class="tab-content" id="myTabContent">
                     <div class="tab-pane fade active show" id="faq_tab_1" role="tabpanel" aria-labelledby="faq_tab_1-tab">
                         <div class="container p-3">
-                            <div class="input-group mb-2"> <input type="text" class="form-select" placeholder="Cidade de retirada"> <input type="text" class="form-select" placeholder="Cidade de retorno"> </div>
+                            <div class="input-group mb-2">
+                                <select type="text" class="form-select">
+                                    <option selected disabled hidden value="">Cidade de retirada</option>
+                                    {{#each agency}}
+                                        <option value="{{_id}}">{{city}}</option>
+                                    {{else}}
+                                        <option disabled value="">Nenhuma cidade registrada</option>
+                                    {{/each}}
+                                </select>
+                                <select type="text" class="form-select">
+                                    <option selected disabled hidden value="">Cidade de retorno</option>
+                                    {{#each agency}}
+                                        <option value="{{_id}}">{{city}}</option>
+                                    {{else}}
+                                        <option disabled value="">Nenhuma cidade registrada</option>
+                                    {{/each}}
+                                </select>
+                            </div>
                             <div class="form-group mb-3 text-white">
                                 <span class="form-label">Data de retirada</span>
                                 <input type="date" class="form-control mt-1"> 
