Create cars and new car page

--- a/server/views/admin/newAgency.handlebars
+++ b/server/views/admin/newAgency.handlebars
@@ -29,11 +29,11 @@
     <div class="card-body">
         <form action="/admin/api/newAgency" method="POST">
         <label for="name">Nome: </label>
-            <input type="text" id="name" name="name" placeholder="Nome da agência" class="form-control">
+            <input type="text" id="name" name="name" class="form-control">
         <label for="slug">Cidade: </label>
-            <input type="text" id="slug" name="city" placeholder="Cidade da agência" class="form-control">
+            <input type="text" id="slug" name="city" class="form-control">
         <label for="slug">Endereço: </label>
-            <input type="text" id="slug" name="address" placeholder="Endereço da agência" class="form-control">
+            <input type="text" id="slug" name="address" class="form-control">
         <br>
         <button type="submit" class="btn btn-success" style="float: right">Adicionar agência</button>    
         </form>
