--- a/server/views/admin/editAgency.handlebars
+++ b/server/views/admin/editAgency.handlebars
@@ -30,7 +30,7 @@
         <form action="/admin/api/editAgency" method="POST">
         <input type="hidden" name="id" value="{{agency._id}}" />
         <label for="name">Nome: </label>
-            <input type="text" id="name" name="name" placeholder="Nome da agência" class="form-control" value="{{agency.name}}" placeholder>
+            <input type="text" id="name" name="name" placeholder="Nome da agência" class="form-control" value="{{agency.name}}">
         <label for="slug">Cidade: </label>
             <input type="text" id="city" name="city" placeholder="Cidade da agência" class="form-control" value="{{agency.city}}">
         <label for="slug">Endereço: </label>
