--- a/server/views/index.handlebars
+++ b/server/views/index.handlebars
@@ -31,7 +31,7 @@
     <div class="container mt-5">
     <div class="row d-flex justify-content-center">
         <div class="col-md-8">
-            <div style="background-color: #363636;">
+            <div style="background-color: #2A363B;">
                 <ul class="nav nav-tabs nav-fill" id="myTab" role="tablist">
                     <li class="nav-item" role="presentation"> <button class="nav-link active" id="faq_tab_1-tab" data-bs-toggle="tab" data-bs-target="#faq_tab_1" type="button" role="tab" aria-controls="faq_tab_1" aria-selected="true">
                             <div class="d-flex flex-column lh-lg"> <i class='bx bxs-plane-alt'></i> <span>Alugar carro</span> </div>
