Create login page and login authentication with passport and bcrypt

--- a/server/views/user/register.handlebars
+++ b/server/views/user/register.handlebars
@@ -1,9 +1,4 @@
-{{#each errors}}
-    <div class="alert alert-danger">
-        {{text}}
-    </div>
-{{/each}}
-
+<h3>Criar conta:</h3>
 <div class="card text-white">
     <div class="card-body">
         <form action="/user/api/register" method="POST">
