--- a/server/views/layouts/main.handlebars
+++ b/server/views/layouts/main.handlebars
@@ -12,6 +12,13 @@
 <body>
     {{>_navbar}}
     <div class="container mt-2">
+        {{#if error}}
+            <div class="alert alert-danger">{{error}}</div>
+        {{else}}
+
+        {{/if}}
+
+        {{>_msg}}
         {{{body}}}
     </div>
     
