--- a/server/views/partials/_navbar.handlebars
+++ b/server/views/partials/_navbar.handlebars
@@ -9,23 +9,33 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/admin">Admin</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
+        {{#if user}}
+          {{#if user.isAdmin}}
+            <li class="nav-item">
+              <a class="nav-link" href="#">{{user.name}}</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/admin">Painel</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/user/logout">Sair</a>
+            </li>
+          {{else}}
+            <li class="nav-item">
+              <a class="nav-link" href="#">{{user.name}}</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/user/logout">Sair</a>
+            </li>
+          {{/if}}
+        {{else}}
+          <li class="nav-item">
+            <a class="nav-link" href="/user/login">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/user/register">Registro</a>
+          </li>
+        {{/if}}
       </ul>
     </div>
   </div>
